--- a/index.html
+++ b/index.html
@@ -202,20 +202,32 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-            <form>
+
+            <div class="alert alert-danger alert-dismissible fade show d-none my-alert" role="alert">
+              <strong>Hai teman-teman!</strong> Pesan Anda sudah kami terima (:
+              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            </div>
+
+            <form name="Kontak-Form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" />
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama"/>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" aria-describedby="email" />
+                <input type="email" class="form-control" id="email" aria-describedby="email" name="email" />
               </div>
               <div class="mb-3">
                 <label for="pesan" class="form-label">Pesan</label>
-                <textarea class="form-control" id="pesan" rows="3"></textarea>
+                <textarea class="form-control" id="pesan" rows="3" name="pesan"></textarea>
               </div>
-              <button type="submit" class="btn btn-danger">Kirim</button>
+              <button type="submit" class="btn btn-danger btn-kirim">Kirim</button>
+
+              <button class="btn btn-danger btn-loading d-none" type="button" disabled>
+                <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                Loading...
+              </button>
+              
             </form>
           </div>
         </div>
@@ -250,5 +262,35 @@
     <!--AKhir Footer-->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
+    <script>
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbz9KCKLsWh-YJgQ_TznrwbO7-OzELDmUSTLDTb3WJP7g1cXgRwKGsaya4ZIvGMIzP-8/exec'
+      const form = document.forms['Kontak-Form']
+      const btnKirim = document.querySelector('.btn-kirim')
+      const btnLoading = document.querySelector('.btn-loading')
+      const myAlert = document.querySelector('.my-alert')
+
+      form.addEventListener('submit', e => {
+        e.preventDefault()
+        //Ketika tombol submit di submit
+        //Tampilkan tombol loading, hilangkan tombol kirim
+        btnLoading.classList.toggle('d-none');
+        btnKirim.classList.toggle('d-none');
+
+        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+          .then(response => {
+             //Tampilkan tombol kirim, hilangkan tombol loading
+            btnLoading.classList.toggle('d-none');
+            btnKirim.classList.toggle('d-none');
+            //Tampilkan alert
+            myAlert.classList.toggle('d-none');
+            //Reset formnya
+            form.reset();
+
+            console.log('Success!', response)
+            })
+          .catch(error => console.error('Error!', error.message))
+      })
+    </script>
   </body>
 </html>
