--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
         </div>
       </div>
       
-      <nav aria-label="Page navigation example">
+     <!-- <nav aria-label="Page navigation example">
   <ul class="pagination justify-content-center">
     <li class="page-item disabled">
     <li class="page-item"><a class="page-link" href="#">Home</a></li>
@@ -242,7 +242,7 @@
     <li class="page-item"><a class="page-link" href="#">Kontak</a></li>
     <li class="page-item">
   </ul>
-</nav>
+</nav> -->
       <!--<nav aria-label="...">
   <ul class="pagination pagination-lg">
     <li class="page-item active" aria-current="page">
