memperbaiki bagian footer

--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     <link rel="stylesheet" href="style.css" />
 
     <title>Literasi</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body id="home">
-
     <!--Kita akan menambahkan link yang menghubungkan dua file-->
 
-<!--<div>
+    <!--<div>
   <a href="index.html">Home</a>
   <a href="tentang.html">Tentang</a>
 </div> -->
@@ -124,7 +123,7 @@
               <img src="project/imgprj1.jpeg" class="card-img-top" alt="Project 1" />
               <div class="card-body">
                 <p class="card-text">Review film oleh Syahdi Rivaldi.</p>
-                 <a href="https://www.instagram.com/p/Cacgr6dvYSc/" class="btn btn-primary" >Selengkapnya</a>
+                <a href="https://www.instagram.com/p/Cacgr6dvYSc/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -133,7 +132,7 @@
               <img src="project/imgprj2.jpeg" class="card-img-top" alt="Project 2" />
               <div class="card-body">
                 <p class="card-text">Artikel karya Salma Amelia yang dilombakan karya tulis tingkat provinsi Jawa Barat.</p>
-                 <a href="https://www.instagram.com/p/CYGCcuxFHug/" class="btn btn-primary">Selengkapnya</a>
+                <a href="https://www.instagram.com/p/CYGCcuxFHug/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -142,7 +141,7 @@
               <img src="project/imgprj3.jpeg" class="card-img-top" alt="Project 3" />
               <div class="card-body">
                 <p class="card-text">Kutipan mingguan HP3 tanggal 02 Maret 2022.</p>
-                 <a href="https://www.instagram.com/p/CalSYobvTLG/" class="btn btn-primary">Selengkapnya</a>
+                <a href="https://www.instagram.com/p/CalSYobvTLG/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -151,7 +150,7 @@
               <img src="project/imgprj4.jpeg" class="card-img-top" alt="Project 4" />
               <div class="card-body">
                 <p class="card-text">Program kerja tahunan yaitu review buku oleh perwakilan kelas X TKJ.</p>
-                 <a href="https://www.instagram.com/p/CY_jGiQvJxa/" class="btn btn-primary">Selengkapnya</a>
+                <a href="https://www.instagram.com/p/CY_jGiQvJxa/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -160,7 +159,7 @@
               <img src="project/imgprj6.jpeg" class="card-img-top" alt="Project 5" />
               <div class="card-body">
                 <p class="card-text">Puisi karya salah satu anggota HP3 kelas XI.</p>
-                 <a href="https://www.instagram.com/p/CX-VoO2lPpf/" class="btn btn-primary">Selengkapnya</a>
+                <a href="https://www.instagram.com/p/CX-VoO2lPpf/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -169,7 +168,7 @@
               <img src="project/imgprj5.jpeg" class="card-img-top" alt="Project 6" />
               <div class="card-body">
                 <p class="card-text">Program kerja tahunan yaitu review buku oleh perwakilan kelas X AKL.</p>
-                 <a href="https://www.instagram.com/p/CX-Xsl7lfKz/" class="btn btn-primary">Selengkapnya</a>
+                <a href="https://www.instagram.com/p/CX-Xsl7lfKz/" class="btn btn-primary">Selengkapnya</a>
               </div>
             </div>
           </div>
@@ -202,7 +201,6 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-6">
-
             <div class="alert alert-danger alert-dismissible fade show d-none my-alert" role="alert">
               <strong>Hai teman-teman!</strong> Pesan Anda sudah kami terima (:
               <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
@@ -211,7 +209,7 @@
             <form name="Kontak-Form">
               <div class="mb-3">
                 <label for="name" class="form-label">Nama Lengkap</label>
-                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama"/>
+                <input type="text" class="form-control" id="name" aria-describedby="name" name="nama" />
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Email</label>
@@ -227,31 +225,38 @@
                 <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
                 Loading...
               </button>
-              
             </form>
           </div>
         </div>
       </div>
-      
-     <!-- <nav aria-label="Page navigation example">
-  <ul class="pagination justify-content-center">
+
+      <nav aria-label="Page navigation example">
+        <!-- <ul class="pagination justify-content-center">
     <li class="page-item disabled">
     <li class="page-item"><a class="page-link" href="#">Home</a></li>
     <li class="page-item"><a class="page-link" href="#">Tentang</a></li>
     <li class="page-item"><a class="page-link" href="#">Proyek</a></li>
     <li class="page-item"><a class="page-link" href="#">Kontak</a></li>
     <li class="page-item">
-  </ul>
-</nav> -->
-      <!--<nav aria-label="...">
-  <ul class="pagination pagination-lg">
-    <li class="page-item active" aria-current="page">
-      <span class="page-link">1</span>
-    </li>
-    <li class="page-item"><a class="page-link" href="#">2</a></li>
-    <li class="page-item"><a class="page-link" href="#">3</a></li>
   </ul> -->
-</nav>
+      </nav>
+      <!--<nav aria-label="...">
+        <ul class="pagination pagination-lg">
+          <li class="page-item active" aria-current="page">
+            <span class="page-link">1</span>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+        </ul>
+      </nav> -->
+
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
+        <path
+          fill="#ff8c00"
+          fill-opacity="1"
+          d="M0,160L21.8,186.7C43.6,213,87,267,131,277.3C174.5,288,218,256,262,240C305.5,224,349,224,393,192C436.4,160,480,96,524,106.7C567.3,117,611,203,655,218.7C698.2,235,742,181,785,186.7C829.1,192,873,256,916,256C960,256,1004,192,1047,181.3C1090.9,171,1135,213,1178,213.3C1221.8,213,1265,171,1309,176C1352.7,181,1396,235,1418,261.3L1440,288L1440,320L1418.2,320C1396.4,320,1353,320,1309,320C1265.5,320,1222,320,1178,320C1134.5,320,1091,320,1047,320C1003.6,320,960,320,916,320C872.7,320,829,320,785,320C741.8,320,698,320,655,320C610.9,320,567,320,524,320C480,320,436,320,393,320C349.1,320,305,320,262,320C218.2,320,175,320,131,320C87.3,320,44,320,22,320L0,320Z"
+        ></path>
+      </svg>
     </section>
     <!--Akhir Contact Us-->
 
@@ -264,22 +269,22 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 
     <script>
-      const scriptURL = 'https://script.google.com/macros/s/AKfycbz9KCKLsWh-YJgQ_TznrwbO7-OzELDmUSTLDTb3WJP7g1cXgRwKGsaya4ZIvGMIzP-8/exec'
-      const form = document.forms['Kontak-Form']
-      const btnKirim = document.querySelector('.btn-kirim')
-      const btnLoading = document.querySelector('.btn-loading')
-      const myAlert = document.querySelector('.my-alert')
+      const scriptURL = 'https://script.google.com/macros/s/AKfycbz9KCKLsWh-YJgQ_TznrwbO7-OzELDmUSTLDTb3WJP7g1cXgRwKGsaya4ZIvGMIzP-8/exec';
+      const form = document.forms['Kontak-Form'];
+      const btnKirim = document.querySelector('.btn-kirim');
+      const btnLoading = document.querySelector('.btn-loading');
+      const myAlert = document.querySelector('.my-alert');
 
-      form.addEventListener('submit', e => {
-        e.preventDefault()
+      form.addEventListener('submit', (e) => {
+        e.preventDefault();
         //Ketika tombol submit di submit
         //Tampilkan tombol loading, hilangkan tombol kirim
         btnLoading.classList.toggle('d-none');
         btnKirim.classList.toggle('d-none');
 
-        fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-          .then(response => {
-             //Tampilkan tombol kirim, hilangkan tombol loading
+        fetch(scriptURL, { method: 'POST', body: new FormData(form) })
+          .then((response) => {
+            //Tampilkan tombol kirim, hilangkan tombol loading
             btnLoading.classList.toggle('d-none');
             btnKirim.classList.toggle('d-none');
             //Tampilkan alert
@@ -287,10 +292,10 @@
             //Reset formnya
             form.reset();
 
-            console.log('Success!', response)
-            })
-          .catch(error => console.error('Error!', error.message))
-      })
+            console.log('Success!', response);
+          })
+          .catch((error) => console.error('Error!', error.message));
+      });
     </script>
   </body>
 </html>
